# vrc-companion

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  TODO.md
src/: audio.rs  auto_input.rs  config.rs  eliza.rs  main.rs  speech_to_text.rs  vrchat.rs
src/audio/: mod.rs  speech_to_text.rs
src/integrations/: auto_input.rs  eliza.rs  mod.rs  vrchat.rs
src/steamvr/: bridge.rs  ffi.rs  manifest.rs  mod.rs  render.rs  session.rs
