[package]
name = "vrc-companion"
version = "0.2.0"
edition = "2024"

[dependencies]
eframe = "0.29"
egui = "0.29"
cpal = "0.15"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "macros"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
dirs = "5.0"
arboard = "3.3"
enigo = "0.6.1"
rosc = "0.10"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_OpenGL",
    "Win32_System_LibraryLoader",
] }
libloading = "0.8"
glow = "0.14"
egui_glow = "0.29"
